style.css
/* ... */
.hidden {
  visibility: hidden;
  opacity: 0;
}

/* COOKIE MESSAGE */
.cookie-message {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  width: 100%;
  background-color: white;
  color: #bbb;
  font-size: 1.5rem;
  font-weight: 400;
}

/* MEDIA QUERIES */

/* Smartphones (portrait and landscape) ----------- */
@media only screen and (min-width: 320px) and (max-width: 480px) {
  /* Styles */

  .desktop-only {
    display: none;
  }

  .mobile-only {
    display: block;
  }
  .nav {
    padding: 5rem 0rem 0rem 1rem;
  }

  .nav.sticky {
    position: relative;
  }

  .nav__links {
    overflow: hidden;
    /* display: block; */
  }

  .nav__link:link,
  .nav__link:visited {
    font-size: 1.2rem;
  }

  .nav__link--btn:link,
  .nav__link--btn:visited {
    color: black;
    background-color: white;
    text-transform: none;
    padding: 0.8rem 0rem;
  }

  .nav__link--btn:link,
  .nav__link--btn:visited {
    display: none;
  }

  .nav__item {
    margin-left: 0.8rem;
  }

  /* Hamburger */
  /* Hide the links inside the navigation menu (except for logo/home) */
  .nav #burger {
    display: none;
  }

  /* Style the hamburger menu */
  .nav a.icon {
    background: white;
    display: block;
    color: black;
  }

  /* Style the active link (or home/logo) */
  .active {
    background-color: #eae4cd;
    color: white;
  }

  .block {
    width: 60vw;
    height: 100vh;
  }

  .block__small {
    display: none;
  }

  h1 {
    font-size: 2.5rem;
  }

  h4 {
    font-size: 1.2rem;
  }

  .btn--text {
    font-size: 1rem;
  }

  .header__img {
    transform: translateY(1rem);
    margin-left: 2rem;
    max-width: 48vw;
  }

  .header__title {
    justify-content: left;
    padding-left: 2rem;
  }

  .features {
    grid-template-columns: minmax(19rem, auto);
    margin: 0 0rem;
  }

  .features__img {
    transform: translateX(0rem);
    width: 88%;
  }

  .section {
    padding: 5rem 3rem;
  }

  .section__header {
    font-size: 2.8rem;
  }

  .section__title {
    margin: 0 auto 2rem 4rem;
  }

  #section--3 {
    position: relative;
  }

  .footer__item {
    font-size: 1.2rem;
  }

  .footer__nav {
    display: grid;
    grid-template-columns: auto auto;
    justify-content: center;
  }

  .block__small2 {
    top: -4rem;
  }

  .container__img {
    display: none;
  }

  .operations {
    margin: 5rem auto 0 auto;
  }

  .operations__header {
    font-size: 2rem;
  }

  .operations__tab {
    margin-right: 0.5rem;
  }

  .operations__tab--active {
    background-color: rgba(135, 155, 156, 0.5);
  }

  .operations__tab span {
    margin-right: 0.5rem;
  }
  .operations__tab-container {
    justify-content: center;
  }

  .btn.operations__tab {
    padding: 1rem;
    font-size: 1.3rem;
  }

  .operations__content {
    padding: 2.5rem 5rem 1.5rem 1rem;
  }

  .operations__content p {
    font-size: 1.4rem;
  }

  .operations__content--active {
    grid-template-columns: 3rem auto;
  }

  .tab--1,
  .tab--2,
  .tab--3 {
    background: white;
  }

  .operations__tab--1:hover {
    background-color: rgba(88, 95, 95, 0.5);
  }

  .slider {
    max-width: 50rem;
    /* right: 12rem; */
  }

  .icon-blocks2 {
    position: relative;
    left: -2rem;
  }

  .dots {
    display: none;
  }

  .slide {
    left: 5%;
    top: -6%;
  }

  .slider__btn--left {
    left: 12%;
  }

  .slider__btn--right {
    right: 12%;
  }

  .testimonial__header {
    font-size: 1.7rem;
  }

  .testimonial__name,
  .testimonial__location {
    font-size: 1.2rem;
  }

  .testimonial__text {
    padding: 1rem 0 0 1rem;
    margin-right: 2.5rem;
    font-size: 1.3rem;
  }

  .testimonial::before {
    font-size: 15rem;
    top: -3.7rem;
    left: -5.8rem;
  }
}

/* Smartphones (landscape) ----------- */
@media only screen and (min-width: 321px) {
  /* Styles */
}

/* Smartphones (portrait) ----------- */
@media only screen and (max-width: 320px) {
  /* Styles */
}

/* iPads (portrait and landscape) ----------- */
@media only screen and (min-width: 768px) and (max-width: 1024px) {
  /* Styles */
  .nav {
    padding: 4rem 0rem;
  }

  .nav__link--btn:link,
  .nav__link--btn:visited {
    color: black;
    background-color: white;
    text-transform: none;
  }

  .nav.sticky {
    position: relative;
  }

  .block {
    width: 47vw;
    height: 100vh;
  }

  .header__img {
    transform: translateY(-3rem);
    max-width: 100%;
    position: relative;
    left: -8rem;
  }

  .header__title {
    justify-content: left;
    padding-left: 1rem;
  }

  .block__small {
    display: none;
  }

  h1 {
    font-size: 3rem;
  }

  h4 {
    font-size: 1.2rem;
  }

  .features {
    grid-template-columns: minmax(420px, auto);
  }

  .operations {
    max-width: 58rem;
  }

  .operations__tab {
    margin-right: 0.5rem;
  }

  .operations__content--active {
    column-gap: 0rem;
  }

  .icon-blocks2 {
    margin-right: 6rem;
  }
  .tab--1,
  .tab--2,
  .tab--3 {
    background: white;
  }
  .container__img {
    display: none;
  }

  .section--sign-up .section__header {
    font-size: 3rem;
  }

  .footer__link,
  .footer__copyright {
    font-size: 1.3rem;
  }
}

/* iPads (landscape) ----------- */
@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
  /* Styles */
}

/* iPads (portrait) ----------- */
@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
  /* Styles */
}

/* Desktops and laptops ----------- */
@media only screen and (min-width: 1224px) {
  /* Styles */

  .header__img {
    transform: translateX(17rem);
    max-width: 27vw;
  }
}

/* Large screens ----------- */
@media only screen and (min-width: 1824px) {
  /* Styles */
  .header__img {
    transform: translateX(62rem);
    max-width: 22vw;
  }
  .nav {
    padding: 4rem 4rem;
  }
}

/* Very large screens ----------- */
@media only screen and (min-width: 2200px) {
  /* Styles */
  .header__img {
    transform: translateX(108rem);
  }
}
/* ... */

